--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "karma-sauce-launcher",
-  "version": "3.0.1",
+  "name": "havunen-karma-sauce-launcher",
+  "version": "5.0.0",
   "description": "A Karma plugin. Launch any browser on SauceLabs!",
   "main": "./dist/index.js",
   "scripts": {
@@ -37,26 +37,27 @@
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "dependencies": {
-    "global-agent": "^2.1.12",
-    "saucelabs": "6.2.2",
-    "webdriverio": "^6.7.0"
+    "global-agent": "^3.0.0",
+    "saucelabs": "^7.3.1",
+    "webdriverio": "^8.16.10"
   },
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/npm": "7.0.10",
-    "@types/fs-extra": "^9.0.6",
-    "@types/global-agent": "^2.1.0",
-    "@types/node": "^14.14.22",
-    "husky": "4.3.8",
-    "jasmine": "^3.6.4",
-    "karma": "^5.2.3",
-    "karma-jasmine": "^4.0.1",
-    "semantic-release": "17.3.7",
-    "typescript": "^4.1.3"
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "11.0.0",
+    "@types/fs-extra": "^11.0.2",
+    "@types/global-agent": "^2.1.1",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.6.1",
+    "husky": "8.0.3",
+    "jasmine": "^5.1.0",
+    "karma": "^6.4.2",
+    "karma-jasmine": "^5.1.0",
+    "semantic-release": "21.1.2",
+    "typescript": "^5.2.2"
   },
   "contributors": [
     "Mark Ethan Trostler <mark@zzo.com>",
