--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,10 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2015",
-    "lib": ["es2015"],
+    "lib": ["es2015", "DOM"],
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "../dist"
+    "esModuleInterop": true,
+    "outDir": "../dist",
+    "types": []
   },
   "files": [
     "index.ts"
