fix saucelabs api ctr

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "havunen-karma-sauce-launcher2",
-  "version": "5.0.5",
+  "version": "5.0.6",
   "description": "A Karma plugin. Launch any browser on SauceLabs!",
   "main": "dist/karma-sauce-launcher.js",
   "module": "dist/karma-sauce-launcher.mjs",
   "typings": "dist/karma-sauce-launcher.d.ts",
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "run-example": "yarn build && yarn copy-dist-to-modules && yarn run-example-karma",
