--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "havunen-karma-sauce-launcher2",
-  "version": "5.0.7",
+  "version": "6.0.0",
   "description": "A Karma plugin. Launch any browser on SauceLabs!",
+  "type": "module",
   "main": "dist/karma-sauce-launcher.js",
   "module": "dist/karma-sauce-launcher.mjs",
   "typings": "dist/karma-sauce-launcher.d.ts",
@@ -23,7 +24,7 @@
     "tag": "latest"
   },
   "engines": {
-    "node": ">= 16.0.0"
+    "node": ">= 20.0.0"
   },
   "husky": {
     "hooks": {
@@ -40,31 +41,32 @@
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "dependencies": {
     "global-agent": "^3.0.0",
-    "saucelabs": "^7.4.0",
-    "webdriverio": "^8.20.0"
+    "saucelabs": "^8.0.0",
+    "webdriverio": "^9.6.0"
   },
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "18.0.0",
-    "@commitlint/config-conventional": "18.0.0",
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/npm": "11.0.0",
-    "@types/fs-extra": "^11.0.3",
-    "@types/global-agent": "^2.1.2",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.7",
-    "husky": "8.0.3",
-    "jasmine": "^5.1.0",
-    "karma": "^6.4.2",
+    "@semantic-release/npm": "12.0.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/global-agent": "^2.1.3",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.7",
+    "husky": "9.1.7",
+    "jasmine": "^5.5.0",
+    "karma": "^6.4.4",
     "karma-jasmine": "^5.1.0",
-    "rollup": "^4.1.4",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-esbuild": "^6.1.0",
-    "semantic-release": "22.0.5",
-    "typescript": "^5.2.2"
+    "rollup": "^4.31.0",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "semantic-release": "24.2.1",
+    "typescript": "^5.7.3"
   },
   "contributors": [
+    "Sampo Kivistö, Havunen",
     "Mark Ethan Trostler <mark@zzo.com>",
     "dignifiedquire <dignifiedquire@gmail.com>",
     "Chris Wren <chris@saucelabs.com>",
